<resources>
    <string name="app_name">Upit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="news">News</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="change_cv">Change CV</string>
    <string name="upload_cv">Upload CV</string>
    <string name="video_call_is_calling">%s is calling you</string>
    <string name="call">Call</string>
    <string name="error_user_no_devices">User has no devices to call</string>
    <string name="error_user_not_found">User not found</string>
    <string name="jobs">Jobs</string>
    <string name="my_profile">My profile</string>
    <string name="phone">Phone</string>
    <string name="job_description">Job description</string>
    <string name="company_description">Company description</string>
    <string name="apply">Apply</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="pick_image">Pick Image</string>
    <string name="view_image">View image</string>
    <string name="view_cv">View CV</string>
    <string name="choose_cv">Choose CV</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_company_description">No company description</string>
    <string name="no_job_description">No job description</string>
    <string name="just_a_moment">Just a moment</string>
    <string name="change_pass">Change password</string>
    <string name="apply_sent">Application sent</string>
</resources>
