<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--<group android:checkableBehavior="single">-->
    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/ic_news"
        android:title="@string/news" />
    <item
        android:id="@+id/nav_jobs"
        android:icon="@drawable/ic_work"
        android:title="@string/jobs" />
    <!--</group>-->

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_my_profile"
                android:icon="@drawable/ic_settings"
                android:title="@string/my_profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
