<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="64dp"
        android:layout_margin="16dp"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@id/text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_profile"
        app:layout_constraintTop_toTopOf="@id/image_profile"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/image_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_profile"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        tools:text="@string/email" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_upload"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_profile">

        <ImageView
            android:layout_width="36dp"
            android:src="@drawable/ic_insert_file"
            android:layout_height="36dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/change_cv"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>