<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/news_image"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                app:layout_collapseMode="parallax"
                tools:background="@drawable/ic_launcher" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                tools:title="asdfg" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_job_description"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:text="@string/job_description"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_job_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@android:color/black"
                android:background="@drawable/shape_white_card"
                android:elevation="4dp"
                android:padding="16dp"
                tools:text="Programmer" />

            <TextView
                android:id="@+id/label_company_description"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/company_description"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_company_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/black"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_white_card"
                android:elevation="4dp"
                android:padding="16dp"
                tools:text="No company description" />

            <Button
                style="@style/BlueButton"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/apply"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>